# Memories-Client

./: .gitignore  README.md
.github/workflows/: deploy-ios-pwa-pages.yml
Android/: README.md  app-config.example.properties  gradle.properties  memories-release.jks
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/drawable/: ic_app.xml  ic_back.xml  ic_clear.xml  ic_close.xml  ic_copy_image.xml  ic_copy_link.xml  ic_copy_url.xml  ic_download.xml  ic_download_folder.xml  ic_flip_h.xml  ic_flip_v.xml  ic_gallery.xml  ic_info.xml  ic_link.xml  ic_load_more.xml  ic_logout.xml  ic_menu.xml  ic_open_web.xml  ic_plaza.xml  ic_policy.xml  ic_print.xml  ic_profile.xml  ic_reset.xml  ic_rotate.xml  ic_rotate_ccw.xml  ic_rotate_cw.xml  ic_share.xml  ic_storage.xml  ic_theme.xml  ic_theme_switch.xml  ic_upload.xml  ic_user.xml  ic_wallpaper.xml  ic_zoom_in.xml  ic_zoom_out.xml
Linux/: CMakeLists.txt
Linux/resources/: resources.qrc  style-dark.qss  style.qss
Linux/scripts/: install.sh
Linux/src/: main.cpp
Linux/src/app/: Application.cpp  Settings.cpp
Linux/src/models/: UploadQueue.cpp  UploadQueue.h
Linux/src/network/: ApiClient.cpp  ApiClient.h  HealthChecker.cpp  HealthChecker.h  ImageUploader.h
Linux/src/ui/: AppleTitleBar.cpp  GalleryWidget.cpp  GalleryWidget.h  ImageInfoDialog.cpp  ImageInfoDialog.h  ImageViewer.cpp  ImageViewer.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MessageBox.cpp  MessageBox.h  SettingsDialog.cpp  UploadDialog.cpp  UploadDialog.h
Linux/src/utils/: ImageCache.cpp  ImageCache.h  Logger.cpp  ThemeManager.cpp  ThemeManager.h
Windows/: CMakeLists.txt  README.md  build_release.bat
Windows/resources/: resources.qrc  style-dark.qss  style.qss
Windows/src/app/: Application.h  Settings.h
Windows/src/models/: ImageModel.h
Windows/src/network/: ImageUploader.cpp
Windows/src/ui/: AppleTitleBar.cpp  AppleTitleBar.h  FlowLayout.cpp  FlowLayout.h  ImageInfoDialog.cpp  ImageInfoDialog.h  LoginDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  UploadDialog.cpp
Windows/src/utils/: Logger.h  ThemeManager.cpp
admin/: index.html  vite.config.ts
admin/src/: App.tsx  styles.css
admin/src/components/: Icon.tsx
iOS/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
iOS/src/: App.tsx  main.tsx  offline.html  pwa.ts  routes.tsx
iOS/src/components/layout/: Footer.tsx
iOS/src/components/settings/: SettingsPanel.tsx
iOS/src/contexts/: SettingsContext.tsx
iOS/src/lib/: api.ts
iOS/src/types/: index.ts
web/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.check.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  routes.tsx
web/src/brand/: Logo.tsx
web/src/common/: AnimatedBackground.tsx  CustomCursor.tsx  LanguageSwitcher.tsx  LoadingScreen.tsx  SystemIcons.tsx  Typewriter.tsx
web/src/components/layouts/: DynamicIslandHeader.tsx  Footer.tsx  Header.tsx  MainLayout.tsx
web/src/components/ui/: button.tsx  card.tsx
web/src/contexts/: LanguageContext.tsx
web/src/lib/: i18n.ts
web/src/pages/: AboutPage.tsx  DownloadPage.tsx  FeaturesPage.tsx  HomePage.tsx  LoginPage.tsx  NotFound.tsx
(+10 files in other folders)
